navigation dan gambar

--- a/Hello.html
+++ b/Hello.html
@@ -6,6 +6,23 @@
     <title>Hello</title>
 </head>
 <body>
+    <ul>
+        <li>
+            <a href="index.html">
+                Home
+            </a>
+            <a href="Hello.html">
+                Hello
+            </a>
+            <a href="games/index.html">
+                Games
+            </a>
+            <a href="games/palworld.html">
+                Palworld
+            </a>
+        </li>
+    </ul>
+    <img src="assets/ninja.jpg" alt="ninja" width="700px" style="object-fit: cover; background-color: burlywood;">
     <p>
         Hello
     </p>
