--- a/games/index.html
+++ b/games/index.html
@@ -6,6 +6,22 @@
     <title>Senarai Games</title>
 </head>
 <body>
+    <ul>
+        <li>
+            <a href="../index.html">
+                Home
+            </a>
+            <a href="../Hello.html">
+                Hello
+            </a>
+            <a href="index.html">
+                Games
+            </a>
+            <a href="palworld.html">
+                Palworld
+            </a>
+        </li>
+    </ul>
     <p>Senarai Games
         <ol>
             <li>Palword</li>
