--- a/index.html
+++ b/index.html
@@ -86,6 +86,22 @@
     }
 </style>
 <body>
+    <ul>
+        <li>
+            <a href="index.html">
+                Home
+            </a>
+            <a href="Hello.html">
+                Hello
+            </a>
+            <a href="games/index.html">
+                Games
+            </a>
+            <a href="games/palworld.html">
+                Palworld
+            </a>
+        </li>
+    </ul>
     <div class="container">
         <p style="color: white; font-size: 64px">Cara-cara Membuat Maggie</p>
         <div id="paragraph">
